traefik/pkg/provider/kubernetes/ingress/fixtures/Ingress-with-endpoint-conditions.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix

---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIP: 10.0.0.1

---
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: service1-abc
  namespace: testing
  labels:
    kubernetes.io/service-name: service1

addressType: IPv4
ports:
  - port: 8080
    name: ""
endpoints:
  - addresses:
      - 10.10.0.1
      - 10.10.0.2
    conditions:
      ready: true
      serving: true
      terminating: false
  - addresses:
      - 10.10.0.3
      - 10.10.0.4
    conditions:
      ready: false
      serving: true
      terminating: true
  - addresses:
      - 10.10.0.5
      - 10.10.0.6
    conditions:
      ready: false
      serving: false
      terminating: true
